# car_plate_israel

./: .dockerignore  .gitignore  Dockerfile  README.md  guide.md  mcp_server.py  pyproject.toml  requirements.txt  test.py
